Update file .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,21 @@
 *.exe
 *.out
 *.app
+
+# Visual Studio 2015/2017/2019 cache/options directory
+.vs/
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
